<resources>
    <string name="app_name">ExamenDiciembre</string>

    <!-- Strings de fragmento Productos -->
    <string name="select_product">Selecciona un producto</string>
    <string name="hamburguesa">Hamburguesa</string>
    <string name="ensalada">Ensalada</string>
    <string name="pizza">Pizza</string>
    <string name="taco">Taco</string>

    <!-- Strings del fragmento de detalles -->
    <string name="detalles_titulo">Has seleccionado %s</string>
    <string name="introduce_la_cantidad">Introduce la cantidad</string>
    <string name="cantidad_hint">Cantidad</string>
    <string name="texto_hora_recogida">Elige la hora de recogida</string>
    <string name="para_comer_horario">Para comer (13:00–15:00)</string>
    <string name="para_cenar_horario">Para cenar (21:00–22:00)</string>
    <string name="introduce_tu_nombre">Introduce tu nombre para la recogida</string>
    <string name="nombre_hint">Nombre</string>
    <string name="continuarButtonText">Continuar</string>
    <string name="atrasButtonText">Atrás</string>
    <string name="error_cantidad_vacia">Es obligatorio introducir una cantidad</string>
    <string name="error_nombre_vacio">Es obligatorio introducir un nombre</string>

    <!-- Strings del fragmento de confirmación -->
    <string name="confirmacion_fragment_title">Confirma los datos del pedido</string>
    <string name="confirmar">Confirmar</string>
    <string name="nombre_confirmacion">Nombre: %s</string>
    <string name="pedido_confirmacion">Pedido: %d x %s</string>
    <string name="horario_confirmacion">Horario de recogida: %s</string>

    <!--Strings del fragmento de pedido realizado -->
    <string name="pedido_realizado">Pedido realizado</string>
    <string name="cerrar_aplicacion">Cerrar la aplicación y continuar con mi vida</string>
    <string name="compartir_text">Dar envidia a mis contactos</string>
    <string name="que_hacer_ahora">Qué quieres hacer ahora?</string>
    <string name="he_hecho_un_pedido">He hecho un pedido en mi aplicacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chooser_title">Compartir</string>
</resources>