<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".DetallePedido">

    <TextView
        android:id="@+id/producto_seleccionado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detalles_titulo"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/introduce_cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduce_la_cantidad"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/producto_seleccionado"
        app:layout_constraintVertical_bias="0.1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInput_cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cantidad_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduce_cantidad">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittxt_cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/eliga_hora_recogiga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_hora_recogida"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInput_cantidad"
        app:layout_constraintVertical_bias="0.05" />

    <RadioGroup
        android:id="@+id/radio_grupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:checkedButton="@id/para_comer"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eliga_hora_recogiga">

        <RadioButton
            android:id="@+id/para_comer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/para_comer_horario"
            android:textSize="14sp"/>

        <RadioButton
            android:id="@+id/para_cenar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/para_cenar_horario"
            android:textSize="14sp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/txt_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/introduce_tu_nombre"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_grupo"
        app:layout_constraintVertical_bias="0.05" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInput_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittxt_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/boton_continuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:text="@string/continuarButtonText"

        app:layout_constraintEnd_toStartOf="@+id/boton_salir"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInput_nombre" />

    <Button
        android:id="@+id/boton_salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"

        android:text="@string/atrasButtonText"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boton_continuar"
        app:layout_constraintTop_toBottomOf="@+id/txtInput_nombre" />
</androidx.constraintlayout.widget.ConstraintLayout>
