<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".ConfirmarDatos">

    <TextView
        android:id="@+id/txtconfirmacion_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmacion_fragment_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_confirmacion"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtconfirmacion_pedido"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_confirmacion"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/horario_recogida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horario_confirmacion"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pedido"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/boton_continuar_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/continuarButtonText"
        app:layout_constraintEnd_toStartOf="@+id/boton_salir_pedido"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horario_recogida" />

    <Button
        android:id="@+id/boton_salir_pedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/atrasButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boton_continuar_pedido"
        app:layout_constraintTop_toBottomOf="@+id/horario_recogida" />
</androidx.constraintlayout.widget.ConstraintLayout>