<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    tools:context=".PedidoFinalizado">

    <TextView
        android:id="@+id/txt_pedido_realizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pedido_realizado"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />
    <ImageView
        android:id="@+id/foto_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pedido_realizado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:src="@drawable/listo"/>
    <TextView
        android:id="@+id/txt_quiere_hacer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/que_hacer_ahora"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.75"
        />
    <ImageView
        android:id="@+id/icono_cerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_quiere_hacer"
        android:layout_margin="25dp"
        android:src="@drawable/baseline_close_24"/>
    <TextView
        android:id="@+id/cerrar_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_aplicacion"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/icono_cerrar"
        app:layout_constraintStart_toEndOf="@+id/icono_cerrar"
        app:layout_constraintTop_toTopOf="@+id/icono_cerrar"
        android:layout_marginLeft="10dp" />
    <ImageView
        android:id="@+id/icono_compartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icono_cerrar"
        android:layout_margin="25dp"
        android:src="@drawable/baseline_close_24"/>
    <TextView
        android:id="@+id/txt_enviar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/compartir_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/icono_compartir"
        app:layout_constraintStart_toEndOf="@+id/icono_compartir"
        app:layout_constraintTop_toTopOf="@+id/icono_compartir"
        android:layout_marginLeft="10dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>